[metadata]
name = usbip_toolkit
author = Jevin Sweval
author_email = jevinsweval@gmail.com
license = MIT
description = Python USB-IP server library to emulate devices with a focus on HDL cosimulation
version = attr: usbip_toolkit.__version__
url = https://github.com/jevinskie/usbip-toolkit


[options]
python_requires = >= 3.8
packages = find:
zip_safe = True
install_requires =
  pyusb
  trio
  usb_protocol

[options.entry_points]
console_scripts =
  usbiptk-demo = usbip_toolkit.tools.usbiptk_demo:main

[build-system]
requires = ["setuptools", "wheel"]
